3-apps/immich/kustomize/immich-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
  name: immich-server
  namespace: immich
spec:
  clusterIP: 10.43.151.169
  clusterIPs:
    - 10.43.151.169
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  sessionAffinity: None
  type: ClusterIP
