3-apps/immich/kustomize/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.photos.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: immich-server
          port: 3001
    - match: Host(`photos.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: immich-server
          port: 3001
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
